--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
   <div class="container mx-auto px-4 py-8 max-w-7xl">
     <!-- Header -->
     <header class="text-center mb-8">
-      <h1 class="text-4xl font-bold text-gray-800 mb-2">🐑 사냥냥</h1>
+      <h1 class="text-4xl font-bold text-gray-800 mb-2">🐑 사냥</h1>
       <p class="text-gray-600">기준 시각: <span id="baseTime">2025-11-05 17:20:30</span> (KST)</p>
       <p class="text-gray-500 text-sm">실시간 카운트다운 업데이트 중</p>
     </header>
@@ -1802,4 +1802,5 @@
   </script>
 </body>
 </html>
+
 
